derive-ex-tests/tests/compile_fail/compare_op/partial_eq_key_not_impl_partial_eq_this.stderr
error[E0277]: can't compare `NotPartialEq` with `_`
 --> tests/compile_fail/compare_op/partial_eq_key_not_impl_partial_eq_this.rs:7:24
  |
7 |     #[partial_eq(key = $)]
  |                        ^ no implementation for `NotPartialEq == _`
  |
  = help: the trait `PartialEq<_>` is not implemented for `NotPartialEq`
